# paco-svd

./: .gitignore  CMakeLists.txt  README.md  args.txt  data_utils.h  main.cpp  myprof.sh  run.sh  svd.cpp  svd_tiling.cpp  svd_tiling.h  upper_bidiagonalization.cpp  utils.h
scripts/: bidiag_gen.f90  gen_data.py  verify_golden.py  verify_result.py  verify_svd.py
